# ScientificWork

./: .gitmodules  CMakeLists.txt  README.md  graphics_builder.py  main.cpp
GUI/: graphics_builder.py
api/: data_paths.txt  name_contract.txt
docs/: Configuration_Guide.md
include/: algorithm_configurator.hpp  base_algorithm.hpp  calculator.hpp  complexity.hpp  constants.hpp  constrained_task_helper.hpp  errors.hpp  file_helper.hpp  file_writer.hpp  function.hpp  global_search_algorithm.hpp  index_algorithm.hpp  logger.hpp  models.hpp  modified_index_algorithm.hpp  operations_helper.hpp  point_set_model_helper.hpp  template_task.hpp  utils.hpp
src/: algorithm_configurator.cpp  base_algorithm.cpp  calculator.cpp  complexity.cpp  constrained_task_helper.cpp  errors.cpp  file_helper.cpp  file_writer.cpp  function.cpp  global_search_algorithm.cpp  index_algorithm.cpp  logger.cpp  main.cpp  models.cpp  modified_index_algorithm.cpp  operations_helper.cpp  point_set_model_helper.cpp  template_task.cpp  utils.cpp
